--- a/main.html
+++ b/main.html
@@ -8,6 +8,21 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<table>
+		<thead>
+			<tr>
+				<th>Roll number</th>
+				<th>Names</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+		</tbody>
+	</table>
     <script type="text/javascript" src="./script.js">
 </script>
 
