--- a/main.html
+++ b/main.html
@@ -13,14 +13,14 @@
 			border:1px solid black;
 			llapse:collapse; */
 		}
-		vedio{
+		video{
 			width:100%
 		}
 		audio{
 			width:100%
 		}
 		img{
-			width:100%
+			width:50%
 		}
 	</style>
 </head>
@@ -59,12 +59,12 @@
 		</li>
 		<li>
 			<video controls>
-				<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"">
+				<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4">
 			</video>
 		</li>
 		<li>
 			<audio controls>
-				<source src="http://commondatastorage.googleapis.">
+				<source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg.">
 			</audio>
 		</li>
 	</ol>
