--- a/main.html
+++ b/main.html
@@ -58,13 +58,13 @@
 			<img src="https://picsum.photos/id/123/200/300" alt="">
 		</li>
 		<li>
-			<video controls>
+			<video width="400" controls>
 				<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4">
 			</video>
 		</li>
 		<li>
-			<audio controls>
-				<source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg.">
+			<audio <src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg." controls>>
+				
 			</audio>
 		</li>
 	</ol>
