--- a/main.html
+++ b/main.html
@@ -63,7 +63,7 @@
 			</video>
 		</li>
 		<li>
-			<audio <src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg." controls>>
+			<audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg." controls>>
 				
 			</audio>
 		</li>
