--- a/main.html
+++ b/main.html
@@ -55,15 +55,15 @@
 	<h1>List of medias</h1>
 	<ol>
 		<li>
-			<img src="https://picsum.photos/id/123/200/300" alt="">
+			<img src="https://picsum.photos/id/123/200/300" alt="image">
 		</li>
 		<li>
 			<video width="400" controls>
-				<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4">
+				<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
 			</video>
 		</li>
 		<li>
-			<audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg." controls>>
+			<audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" controls>
 				
 			</audio>
 		</li>
